detection of frontpage is better. sidebar text overflowing in webkit fixed.
fixed issue #72



git-svn-id: https://digressit.googlecode.com/svn/trunk@104 b80beb6a-a484-11de-b98f-4500b42dc123

--- a/theme/theme.css
+++ b/theme/theme.css
@@ -677,7 +677,8 @@ a{
 }
 
 .sidebar .sidebar-item{
-	width: 100%;
+	width: 240px;
+	padding: 3px 25px;
 }
 
 
@@ -728,7 +729,6 @@ a:hover{
 
 .sidebar .sidebar-item {
 	margin-left:-20px;
-	padding:3px 20px;
 }
 
 #live-post-search{
